working on dnd-prob

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <title>Ms. A's Math Apps</title>
 </head>
 <body>
+    <h1>Ms. A's Math Apps</h1>
     <ul>
         <li>
             <a href="dnd-roller.html">DnD Dice Roll Simulator</a>
+        </li>
+        <li>
+            <a href="dnd-prob.html">DnD Probability Calculator</a>
         </li>
     </ul>
 </body>
