--- a/dnd-prob.html
+++ b/dnd-prob.html
@@ -86,6 +86,7 @@
     
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="mathsup.js" type="text/javascript"></script>
     <script src="dnd-prob.js"></script>
 </body>
 </html>
