started on sr-roll and sr-prob

--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
 </head>
 <body>
     <h1>Ms. A's Math Apps</h1>
+    <h3>Dungeons & Dragons (5e) applets</h3>
     <ul>
         <li>
             <a href="dnd-roller.html">DnD Dice Roll Simulator</a>
         </li>
         <li>
             <a href="dnd-prob.html">DnD Probability Calculator</a>
+        </li>
+    </ul>
+    <h3>Shadowrun (5e) applets</h3>
+    <ul>
+        <li>
+            <a href="sr-roller.html"> Shadowrun Dice Roll Simulator</a>
+        </li>
+        <li>
+            <a href="sr-prob.html"> Shadowrun Probability Calculator</a>
         </li>
     </ul>
 </body>
