--- a/index.html
+++ b/index.html
@@ -2,32 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Ms. A's Math Apps</title>
+    <title>Welcome to Ms. A's Classroom!</title>
 </head>
 <body>
-    <h1>Ms. A's Math Apps</h1>
-    <h3>Dungeons & Dragons (5e) applets</h3>
-    <ul>
-        <li>
-            <a href="dnd-roller.html">DnD Dice Roll Simulator</a>
-        </li>
-        <li>
-            <a href="dnd-prob.html">DnD Probability Calculator</a>
-        </li>
-    </ul>
-    <h3>Shadowrun (5e) applets</h3>
-    <ul>
-        <li>
-            <a href="sr-roller.html"> Shadowrun Dice Roll Simulator</a>
-        </li>
-        <li>
-            <a href="sr-prob.html"> Shadowrun Probability Calculator</a>
-        </li>
-    </ul>
+    <p></p>
+    <a href="/music/index.html">Music Production Courses</a>
+    <a href="/statistics/index.html">Statistics Courses and Apps</a>
+    <a href="/technology/index.html">Technology Courses -- Computer Programming & Robotics</a>
 </body>
 </html>
