--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <title>Welcome to Ms. A's Classroom!</title>
 </head>
 <body>
-    <p></p>
-    <a href="/music/index.html">Music Production Courses</a>
-    <a href="/statistics/index.html">Statistics Courses and Apps</a>
-    <a href="/technology/index.html">Technology Courses -- Computer Programming & Robotics</a>
+    <h1> Ms. A's Classroom</h1>
+    <div id="classes">
+        <h2>Classes</h2>
+        <ul id="class-list">
+            <li><a href="music/index.html">Music Production</a></li>
+            <li><a href="statistics/index.html">(AP) Statistics</a></li>
+            <li><a href="technology/index.html">Coding & Robotics</a></li>
+        </ul>
+    </div>
+
 </body>
 </html>
