--- a/music/index.html
+++ b/music/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Ms. A's Music Classes</title>
+    <title>Harlem Renaissance Music Studio</title>
 </head>
 <body>
-    
+    <div id="studio">
+        <h1>Check out our studio!</h1>
+        <ul id="studio-links">
+            <li><a href="">Studio Tour</a></li>
+            <li><a href="">Clubs & Activities</a></li>
+        </ul>
+        <br><br><br>
+
+        <h1>HRHS Music Courses</h1>
+        <ul id="music-classes">
+            <li><a href="">Music Production Fall 2023</a></li>
+            <li><a href="">Student Work Showcase</a></li>
+        </ul>
+
+    </div>
 </body>
 </html>
