--- a/music/musicprod.html
+++ b/music/musicprod.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Music Production Class</title>
+    <title>Ms. A's Music Production Class</title>
 </head>
 <body>
-    
+    <div id="activities">
+        <h1>This Trimester's Activities</h1>
+    </div>
 </body>
 </html>
