--- a/music/index.html
+++ b/music/index.html
@@ -11,14 +11,14 @@
     <div id="studio">
         <h1>Check out our studio!</h1>
         <ul id="studio-links">
-            <li><a href="">Studio Tour</a></li>
-            <li><a href="">Clubs & Activities</a></li>
+            <li><a href="studio-tour.html">Studio Tour</a></li>
+            <li><a href="music-clubs.html">Clubs & Activities</a></li>
         </ul>
         <br><br><br>
 
         <h1>HRHS Music Courses</h1>
         <ul id="music-classes">
-            <li><a href="">Music Production Fall 2023</a></li>
+            <li><a href="musicprod.htmnl">Music Production Fall 2023</a></li>
             <li><a href="">Student Work Showcase</a></li>
         </ul>
 
